Fix MySkills alignment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -212,7 +212,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 30px;
     z-index: 10;
     list-style: none;
